--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					I'm a Taiwanese-Canadian product designer from Vancouver, currently living as a polite expat in San Francisco.</p><br>
 					I design <a class="link" href="#dx-link">developer experience</a> for Apple.<br>
 				<p>Previously, I created <a class="link" href="#aviation-link">aviation analytics products</a> for Boeing,
-					built <a class="link" href="#dataviz-link">data visualization</a>, and
+					built <a class="link" href="#datavis-link">data visualization</a>, and
 					conducted research in <a class="link" href="#vision-science-link">vision science</a>.
 				</p><br>
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
