copy and mobile nav display setting fixes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<img class="dx-img" src="images/dx.svg" alt="A box containing overflowing tool-like objects, including databases, marbles, and microchips.">
 				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.<br><br></p>
 				<p>To help iTunes and Maps engineers manage a large number of data processing jobs, I designed a task scheduling
-					and workflow management feature for our PaaS (similar to <a class="body-link" target="_blank" href="https://airflow.apache.org">Airflow</a>), allowing engineers to create, schedule,
-					and monitor complex <a class="body-link" target="_blank" href="https://spark.apache.org">Spark</a> workflows.</p>
+					and workflow management feature for our PaaS (similar to <a class="body-link" target="_blank" href="https://airflow.apache.org">Apache Airflow</a>), allowing engineers to create, schedule,
+					and monitor complex <a class="body-link" target="_blank" href="https://spark.apache.org">Apache Spark</a> workflows.</p>
 			</div>
 		</div>
 		<!----------------------AVIATION------------------------->
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 		<!----------------------COPYRIGHT------------------------->
-		<div class="copyright"><center>Copyright 2019 © Jessie Chen.<br> Built with HTML & CSS on Github Pages.<center></div>
+		<div class="copyright"><center>Copyright 2019 &#169; Jessie Chen.<br> Built with HTML & CSS on Github Pages.<center></div>
 	</div>
 
 	<div class="navigation">
@@ -115,7 +115,7 @@
 			<li><a class="nav-link" href="#vision-science-link" onClick="closeMenu()">Vision Science</a></li>
 		</ul>
 
-		/**** mobile nav ****/
+		<!----------------------MOBILE NAV------------------------->
 		<ul class="mobile-nav" id="mobile-nav">
 			<li><a class="nav-link" href="#hello-link" onClick="closeMenu()">Hello</a><li>
 			<li><a class="nav-link" href="#tldr-link" onClick="closeMenu()">TL;DR</a></li>
