replaced -- with &mdash;

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!----------------------DX------------------------->
 		<div class="body-container">
 			<a id="dx-link"> </a>
-			<div class="date">Nov 2018 – Present</div>
+			<div class="date">Nov 2018 &mdash; Present</div>
 			<div class="title">Developer Experience</div>
 			<div class="body-copy">
 				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service PostgresSQL offering.</p>
@@ -55,7 +55,7 @@
 		<!----------------------AVIATION------------------------->
 		<div class="body-container">
 			<a id="aviation-link"> </a>
-			<div class="date">Jan 2014 – Sep 2018</div>
+			<div class="date">Jan 2014 &mdash; Sep 2018</div>
 			<div class="title">Aviation</div>
 			<div class="body-copy">
 				<p>At <a class="body-link" target="_blank" href="https://boeing.com">Boeing</a>, I created data products to help engineers and analysts do more with numbers.</p>
@@ -70,7 +70,7 @@
 		<!----------------------DATAVIs------------------------->
 		<div class="body-container">
 			<a id="datavis-link"> </a>
-			<div class="date">Jan 2014 – Dec 2015</div>
+			<div class="date">Jan 2014 &mdash; Dec 2015</div>
 			<div class="title">DataVis</div>
 			<div class="body-copy">
 				<p>As a data designer for an <a class="body-link" target="_blank" href="https://www.engagedata.ca">atomic startup</a>, I created many interactive data dashboards for our primary client, Boeing.</p>
@@ -84,7 +84,7 @@
 		<!----------------------VISION SCIENCE------------------------->
 		<div class="body-container">
 			<a id="vision-science-link"></a>
-			<div class="date">Sep 2011 – Apr 2014</div>
+			<div class="date">Sep 2011 &mdash; Apr 2014</div>
 			<div class="title">Vision Science</div>
 			<div class="body-copy">
 				<p>At the <a class="body-link" target="_blank" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
