--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 			<div class="hello-title">Hello,</div>
 			<div class="body-copy">
 				<p>My name is Jessie (she/her).
-					I'm a Taiwanese-Canadian product designer from Vancouver, currently living as a polite expat in San Francisco.</p><br>
-					I design <a class="link" href="#dx-link">developer experience</a> for Apple.<br>
-				<p>Previously, I created <a class="link" href="#aviation-link">aviation analytics products</a> for Boeing,
+					I'm a Taiwanese-Canadian product designer from Vancouver, BC, living as a polite expat in San Francisco.
+					Currently, I design for Apple Health Special Projects.</p><br>
+					Previously, I designed <a class="link" href="#dx-link">developer experience</a> for Apple.<br>
+				<p>I created <a class="link" href="#aviation-link">aviation analytics products</a> for Boeing,
 					built <a class="link" href="#datavis-link">data visualization</a>, and
 					conducted research in <a class="link" href="#vision-science-link">vision science</a>.
 				</p><br>
@@ -42,9 +43,10 @@
 				<div class="tldr-title">TL;DR</div>
 			<div class="body-copy">
 				<p>I'm a generalist. I understand that different kinds of chaos can feel very similar, whether at a startup or a
-					monolithic enterprise.<br><br> I've designed complex systems, often involving lots of data.<br><br>
-					(Un)fortunately, I've been a team-of-one designer for most of my career. This means I'm also very much a researcher, project manager, product owner,
-					visual designer, and design evangelist.</p>
+					monolithic enterprise.<br><br> I've designed complex systems, often involving lots of data in specialized domains 
+					like aviation, devOps, and healthcare.<br><br>
+					Prior to joining Apple, I began my career as solo designer on many large engineering projects, growing layers of
+					thick skin by also playing the role of researcher, product manager, and design evangelist.</p>
 			</div>
 		</div>
 		<!----------------------DX------------------------->
