--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					Currently, I design for Apple Health Special Projects.</p><br>
 					Previously, I designed <a class="link" href="#dx-link">developer experience</a> for Apple.<br>
 				<p>I created <a class="link" href="#aviation-link">aviation analytics products</a> for Boeing,
-					built <a class="link" href="#datavis-link">data visualization</a>, and
+					built <a class="link" href="#datavis-link">data visualizations</a>, and
 					conducted research in <a class="link" href="#vision-science-link">vision science</a>.
 				</p><br>
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
@@ -52,12 +52,12 @@
 		<!----------------------DX------------------------->
 		<div class="body-container">
 			<a id="dx-link"> </a>
-			<div class="date">Nov 2018 &mdash; Present</div>
+			<div class="date">Nov 2018 &mdash; Jan 2020</div>
 			<div class="title">Developer Experience</div>
 			<div class="body-copy">
-				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service PostgresSQL offering.</p>
+				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing for Apple Cloud Services 
+					prior to the launch of an internal self-service PostgresSQL offering.</p>
 				<img class="dx-img" src="images/dx.svg" alt="A box containing overflowing tool-like objects, including databases, marbles, and microchips.">
-				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.<br><br></p>
 				<p>To help iTunes and Maps engineers manage a large number of data processing jobs, I designed a task scheduling
 					and workflow management feature for our PaaS (similar to <a class="body-link" target="_blank" href="https://airflow.apache.org">Apache Airflow</a>), allowing engineers to create, schedule,
 					and monitor complex <a class="body-link" target="_blank" href="https://spark.apache.org">Apache Spark</a> workflows.</p>
