--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<p>I'm a generalist. I understand that different kinds of chaos can feel very similar, whether at a startup or a
 					monolithic enterprise.<br><br> I've designed complex systems, often involving lots of data in specialized domains 
 					like aviation, devOps, and healthcare.<br><br>
-					Prior to joining Apple, I began my career as solo designer on many large engineering projects, growing layers of
+					Prior to joining Apple, I began my career as a solo designer on many large engineering projects, growing layers of
 					thick skin by also playing the role of researcher, product manager, and design evangelist.</p>
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 		<!----------------------COPYRIGHT------------------------->
-		<div class="copyright"><center>Copyright 2020 &#169; Jessie Chen.<br> Built with HTML & CSS on Github Pages.<center></div>
+		<div class="copyright"><center>Copyright 2022 &#169; Jessie Chen.<br> Written, designed, illustrated, and built by me.<center></div>
 	</div>
 
 	<div class="navigation">
