Fix dead links and updated copy
Updated NDA statement, fixed dead links for Boeing and VCL.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				</p><br>
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
 			</div>
-			<div class="disclaimer">Due to NDAs, I can't publish details of my work
-				on B2B solutions and internal services. <a class="body-link" href="mailto:itsjessiechen@gmail.com" target="_blank">Contact me</a> to learn more.</div>
+			<div class="disclaimer">Due to NDAs, I can't share details of my work
+				on B2B solutions and internal services. <a class="body-link" href="mailto:itsjessiechen@gmail.com" target="_blank">Contact me</a> to learn more about my process.</div>
 		</div>
 		<!---------------------------TL;DR------------------------->
 		<div class="tldr">
@@ -73,7 +73,7 @@
 				<img class="aviation-img" src="images/aviation.svg" alt="An aircraft travelling in the southwest direction.">
 				<p>This included dashboards to forecast aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
 					help airlines reduce operating costs.<br><br></p>
-				<p>I designed a <a class="body-link" target="_blank" href="https://ww2.jeppesen.com/network-and-operations-management/ops-advisor/">disruption management application</a> to help airline operation centers track
+				<p>I designed and tested a whitespace product to improve an <a class="body-link" target="_blank" href="https://ww2.jeppesen.com/network-and-operations-management/ops-control/">existing disruption management tool</a>, with the goal to help airline operation centers track
 					flight status and mitigate delays.<br><br></p>
 				<p>I introduced a new design system to revamp legacy analytics applications that help engineers monitor and anticipate aircraft maintenance issues.</p>
 			</div>
@@ -84,7 +84,7 @@
 			<div class="date">Jan 2014 &mdash; Dec 2015</div>
 			<div class="title">DataVis</div>
 			<div class="body-copy">
-				<p>As a data designer for an <a class="body-link" target="_blank" href="https://www.engagedata.ca">atomic startup</a>, I created many interactive data dashboards for our primary client, Boeing.</p>
+				<p>As a data designer for an atomic startup, I created many interactive data dashboards for our primary client, Boeing.</p>
 				<img class="dataviz-img" src="images/dataviz.svg" alt="A stack of papers, with the frontmost page containing a hybrid area and line chart.">
 				<p>Outside of client work, I had a lot of fun creating <a class="body-link" target="_blank" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
 					to promote our company in the open data community.<br><br></p>
@@ -102,7 +102,7 @@
 					<a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and led research projects
 					that explored interesting quirks with visual perception.<br><br></p>
 				<img class="vision-science-img" src="images/vision-science.svg" alt="An eye with elaborate eyelashes on the left-hand side.">
-				<p>On one <a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">data visualization project</a>, we used radical encodings like luminance and
+				<p>On one <a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/correlation/">data visualization project</a>, we used radical encodings like luminance and
 					orientation to see whether people can effectively understand correlation from those unconventional charts.<br><br></p>
 				<p>I programmed experiments, conducted trials, performed statistical analysis, and had a blast making data beautiful and meaningful.</p>
 			</div>
