--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<title>Jessie Chen (jsschn.com)</title>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
