--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <title>Jessie Chen (jsschn.com)</title>
 <head>
+	<link rel="icon" href="icon.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
